fixing identity management